# logicker

./: Analysis.txt  CMakeLists.txt  Doxyfile  README.md  TODO.txt  notes_on_conditions.txt  notes_on_simple_puzzle_conditions.txt
puzzles/: elements.lgc  latin_square3x3.lgc  magnets.lgc  mines.lgc  norinori.lgc  staircases.lgc  star_battle.lgc  sudoku_classic.lgc
src/: main.cpp
src/Checker/: FieldStatus.hpp
src/checker/: checker.hpp  checker_old.hpp  even_newer.hpp  factory.hpp  traits.hpp
src/core/: checker.hpp  condition.hpp  condition_instance.hpp  deducer.hpp  field.hpp  grid.hpp  input_node.hpp  integer_field.hpp  integer_field_type.hpp  puzzle.hpp  puzzle_instance.hpp  puzzle_instance_factory.hpp  puzzle_instance_v1.hpp  rectangle.hpp  solver.hpp
src/core/constraint/: constraint.hpp  givens.hpp  grid.hpp  grid.hpp.bckp_14_10  polymorphic_map.hpp  regions.hpp  value_set.hpp  value_set.hpp.bckp_14_10  value_slot.hpp  value_slot.hpp.bckp_14_10
src/core/constraint/constraint/: composite.hpp  value_constraint.hpp  values_sets_constraint.hpp
src/core/constraint/extractor/: value_extractor.hpp  values_set_extractor.hpp
src/core/elements/: condition.hpp
src/core/elements/condition/: a_condition.hpp
src/core/elements/field_type/: integer_field_type.hpp
src/puzzle/: latin_square.hpp  simple_puzzles.hpp
src/puzzle/simple/: elements.hpp  latin_square.hpp  magnets.hpp  mines.hpp  norinori.hpp  staircases.hpp  star_battle.hpp  sudoku.hpp  sudoku_classic.hpp
src/solver/: condition.hpp  deducer.hpp  factory.hpp  solver.hpp  solver_old.hpp
(+19 files in other folders)
